---------------------------
a10-neutron-lbaas CHANGELOG
---------------------------

Unfortunately this document was not born at the same time as a10-neutron-lbaas. Changes tracked from 1.6.5 > onward
* 1.6.9
- Move devices dict out of config.py into a DB
- Pinned a10-openstack-lib dependency to v0.2.1
- Changed name of a10_device_instance module to a10_device as well as classes and functions that contained A10DeviceInstance to A10Device.
- Important: the preferred service_plugin name used in neutron.conf
  will no longer be: a10_neutron_lbaas.neutron_ext.services.a10_device_instance.plugin.A10DeviceInstancePlugin
  it will be:        a10_neutron_lbaas.neutron_ext.services.a10_device.plugin.A10DevicePlugin
- Backwards compatibility with the service_plugin name a10_neutron_lbaas.neutron_ext.services.a10_device_instance.plugin.A10DeviceInstancePlugin will be preserved.

* 1.6.8
- Pinned acos-client dependency to v1.4.3
- HM creation now checks listener for port # so correct port # is used.

* 1.6.7
- Pinned acos-client dependency to v1.4.2

* 1.6.5
- Name-based configuration for LB/listener/pool/member/monitor
- Per-device default configuration for LB/listener/pool/member/monitor
- Global default configuration for LB/listener/pool/member/monitor
- Extended stats support
- Necessary changes for Ocata/Pike/Queens compatibility