@@ -95,45 +95,114 @@ Networks:
 Open `/etc/neutron/neutron.conf` in your preferred text editor.
 Under the `service_plugins` setting, ensure `a10_neutron_lbaas.neutron_ext.services.a10_device_instance.plugin.A10DeviceInstancePlugin` is listed. The `service_plugins` are separated by `,`s.
 
-Under the `api_extensions_path` setting, ensure the path to `a10_neutron_lbaas.neutron_ext.extensions` is listed. The `api_extensions_path`s are separated by `:`s. You can find the path of the installed extension by running `python -c "import os; import a10_neutron_lbaas.neutron_ext.extensions as m; print(os.path.dirname(os.path.abspath(m.__file__)))"`.
-
-#### Device configuration
-
-After installation, you will need to provide configuration for the driver so the driver is aware of the appliances you have configured.  The configuration is a python file stored in `/etc/a10/config.py`.  Below is a sample to show options and formatting, though any legal python can be used to calculate values or define classes:
-```python
-devices = {
-    "ax1": {
-        "name": "ax1",
-        "host": "10.10.100.20",
-        "port": 443,
-        "username": "admin",
-        "password": "a10",
-        "autosnat": True,
-        "api_version": "3.0",
-    }
-}
+Under the `api_extensions_path` setting, ensure the path to `a10_neutron_lbaas.neutron_ext.extensions` is listed. The `api_extensions_path`s are separated by `:`s. You can find the path of the installed extension by running 
+```shell
+python -c "import os; import a10_neutron_lbaas.neutron_ext.extensions as m; print(os.path.dirname(os.path.abspath(m.__file__)))"`.
 ```
 
-#### vThunder Appliance Configuration
+## Creating A10 Devices
 
-A10's LBaaS driver supports a default scheduling strategy of "one appliance per tenant".  Below is a sample configuration (stored in `/etc/a10/config.py`):
-```python
-vthunder = {
-    'username': 'admin',
-    'password': 'a10',
+### A10 Device configuration
+A10 devices are stored in the neutron database and can be created using the neutron cli.
 
-    'api_version': '3.0',
+The following command configures an A10 device in the neutron database with a name of `ax1` that can be reached by accessing `10.10.100.20`, using a username of `admin`, a password of `a10`, and AXAPI version `3.0`.  All server load balancers will be configured with `autosnat` enabled, using the `http` protocol and using port `80`.
+```shell
+neutron a10-device-create 10.10.100.20 admin a10 3.0 --a10-opts autosnat,protocol=http,port=80 --name ax1
+```
 
-    'nova_flavor': 'acos.min',
-    'glance_image': 'c2722746-0c06-48b1-93c3-a9dbc2f6e628',
+##### `host` (required)
 
-    'vthunder_tenant_name': 'admina',
-    'vthunder_tenant_username': 'admina',
-    'vthunder_tenant_password': 'password',
+The ip address or host name of the A10 appliance. For a virtual chassis configuration, this should be the floating host or ip address of the master.
 
-    'vthunder_management_network': 'private',
-    'vthunder_data_networks': ['vipnet', 'membernet']
-}
+##### `username` and `password` (required)
+
+Authentication credentials to control the A10 appliance via the AXAPI.
+
+##### `api version` (required)
+
+The AXAPI version utilized to access Thunder devices and vThunder applicances.  This is dependent on your image version:
+
+* ACOS version 2.x - `"2.1"`
+* ACOS version 4.x - `"3.0"`
+`
+##### `port` (default `443`)
+
+Port that the AXAPI is exposed on
+
+##### `protocol` (default `http`)
+
+Port that the AXAPI is using.
+
+`http` or `https`
+
+#### A10 Optional Parameters `--a10-opts`
+Various ACOS settings can be set for the a10-device.  These settings will be applied to all server load balancers that are created on the a10-device.  Specifying `--a10-opts` is optional, and the defaults will be taken if none are specified.
+
+Pass a comma or space separated list of options to `--a10-opts`
+
+To enable a boolean options, simply supply it in the list of options.
+
+To disable a boolean option, prefix `no-` to the option.  For example to disable `write-memory`, pass `no-write-memory` in the `--a10-opts` list.
+
+Prefix `no-` to options with assigned values to null out the value in the database.  For example `no-default-virtual-server-vrid` will make it's value null.
+
+Note: When updating options, it will be necessary to recreate existing Load Balancers and VIPs for the config options to be passed to the A10 device or vThunder. 
+
+##### `autosnat` (default `False`)
+
+Source address translation is configured on the VIP.
+
+##### `conn-limit` (default `8000000`)
+
+Specify the maximum number of concurrent connections allowed on a real server.
+
+##### `default-virtual-server-vrid` (default `None`)
+
+Virtual servers will be created on this VRID. The VRID must already be configured on the device. Example values: None, 1, 2, ...
+
+##### `ha-sync-list` (defalut `False`)
+
+Contains a list of hostnames or IP addresses that the driver will run the `ha sync` command against whenever a write operation occurs.
+
+##### `ipinip` (defalut `False`)
+
+Enable IP in IP on vports.
+
+##### `source-nat-pool` (default `None`)
+
+Set to the name of a nat pool to use that pool for source nat on vports the nat pool must already exist on the ACOS device.
+
+##### `shared-partition` (default `shared`)
+
+If using a shared partition (v_method=LSI), then this field configures which partition to use. By default, it is the main shared partition.
+
+##### `use-float` (default `False`)
+
+Utilize the floating address of the member and not the actual interface ip.
+
+For nova based pool/service-group members, setting this to True will cause the driver to lookup the nova server's floating ip and use that for communication instead of its neutron port IP address.
+
+##### `v-method` (default `LSI`)
+
+Partition method; "LSI" to put all slb's in a single shared partition, or "ADP" to use a partition per tenant. Partitions are RBA style in ACOS 2.x, and L3V in ACOS 4.x.
+
+* LSI (Logical Service Instance) This configuration is realized by multiple tenant VIPs in the shared partition.
+
+* ADP (Application Delivery Partition) This refers to the RBAC partitions on the Advanced Core Operating System
+(ACOS) on any Thunder/AX device.
+
+##### `write-memory` (default `True`)
+
+Enable or disable calling write memory directly after any operation that changes ACOS's running state. Turning this off also disables all ha sync operations, regardless of the settings in ha_sync_list.
+
+
+### vThunder Appliance Configuration
+
+A10's LBaaS driver supports a default scheduling strategy of "one appliance per tenant".  Create vThunder configuarations using the neutron cli.
+
+neutron a10-vthunder-create `nova-flavor` `glance-image` `username` `api-version` `vthunder-management-network` `[vthunder-data-neteworks]` 
+```shell
+neutron a10-vthunder-create acos.min c2722746-0c06-48b1-93c3-a9dbc2f6e628 admin a10 3.0 private vipnet,membernet --a10-opts vthunder-tenant-name=admina,vthunder-tenant-username=admina,vthunder-tenant-password=password
 ```
 
 ##### `username` (required)
@@ -144,74 +213,87 @@ The administrator username on your vThunder appliance image.
 
 The administrator password on your vThunder appliance image.
 
-##### `api_version` (required)
+##### `api-version` (required)
 
 The AXAPI version utilized to access vThunder appliances.  This is dependent on your vThunder appliance image version:
 
 * 2.7.x - `"2.1"`
 * 4.x.x - `"3.0"`
 
-##### `nova_flavor` (required)
+##### `nova-flavor` (required)
 
 The name of the nova flavor used to construct vThunder device instances.  The minimum requirements are dependent on your vThunder appliance image version:
 
-###### 2.7.x
+##### 2.7.x
 * CPU: 1 VCPU
 * RAM: 2GB
 * Storage: 12GB
 
-###### 4.x.x
+##### 4.x.x
 * CPU: 1 VCPU
 * RAM: 4GB
 * Storage: 12GB
 
-##### `glance_image` (required)
+##### `glance-image` (required)
 
 The Glance or Nova image ID of your vThunder appliance image.  This can be obtained through Horizon or the Openstack CLI.
 
-##### `vthunder_tenant_name` (required)
+##### `vthunder-tenant-name` (required)
 
 The name of the service tenant where vThunder appliance instances will be created.
 
-##### `vthunder_tenant_username` (required)
+##### `vthunder-tenant-username` (required)
 
 The Openstack user login name which has access to the above-named service tenant.
 
-##### `vthunder_tenant_passsword` (required)
+##### `vthunder-tenant-passsword` (required)
 
 The Openstack password of the above-mentioned login.
 
-##### `vthunder_management_networks` (required)
+##### `vthunder-management-networks` (required)
 
 The Openstack network name or ID that the vThunder management interface will be connected to.
 
-##### `vthunder_data_networks` (required)
+##### `vthunder-data-networks` (required)
 
 A list of Openstack network names or IDs that the vThunder data interfaces will be connected to.  A minimum of one is required.
 
-For complete documentation of the a10 config.py file, please refer to the [sample config file](https://github.com/a10networks/a10-neutron-lbaas/blob/master/a10_neutron_lbaas/etc/config.py).
-
-#### Essential device configuration
-
-###### `host` (required)
-
-The ip address or host name of the A10 appliance. For a virtual chassis configuration, this should be the floating host or ip address of the master.
-
-###### `port` (default `443`)
+##### `port` (default `443`)
 
 Port that the AXAPI is exposed on
 
-###### `username` and `password` (required)
+##### `protocol` (default `http`)
+
+Port that the AXAPI is using.
+
+`http` or `https`
+
+### A10 config.py 
+A10 devices and vThunder configurations are now managed using the neutron cli.  All other config options are managed in the `/etc/a10/config.py` config file.
+
+For complete documentation of the a10 config.py file, please refer to the [sample config file](https://github.com/a10networks/a10-neutron-lbaas/blob/master/a10_neutron_lbaas/etc/config.py).
+
+### Essential device configuration
+
+##### `host` (required)
+
+The ip address or host name of the A10 appliance. For a virtual chassis configuration, this should be the floating host or ip address of the master.
+
+##### `port` (default `443`)
+
+Port that the AXAPI is exposed on
+
+##### `username` and `password` (required)
 
 Authentication credentials to control the A10 appliance via the AXAPI.
 
-###### `api_version` (default `"2.1"`)
+##### `api-version` (default `"2.1"`)
 
 Version of the A10 appliance's AXAPI. `"2.1"` for 2.X series ACOS versions,
 `"3.0"` for 4.X versions.
 
 
-#### vThunder License Manager Configuration
+### vThunder License Manager Configuration
 The A10 vThunder virtual load balancing appliance has a flexible system for licensing.  Below is a sample configuration for license management (stored in `/etc/a10/config.py`):
 ```python
 license_manager = {
@@ -228,25 +310,25 @@ license_manager = {
 }
 ```
 
-##### `hosts` (required)
+#### `hosts` (required)
 A list of host entries specifying the IP address or hostname and TCP port of licensing servers.
 
-##### `serial` (required)
+#### `serial` (required)
 The serial number used for your vThunder appliances
 
-##### `instance-name` (required)
+#### `instance-name` (required)
 The instance name attached to the license.
 
-##### `bandwidth-base` (required for Pay-As-You-Go licensing)
+#### `bandwidth-base` (required for Pay-As-You-Go licensing)
 The feature's bandwidth base measured in megabytes.
 
-##### `interval` (required for Pay-As-You-Go licensing)
+#### `interval` (required for Pay-As-You-Go licensing)
 The feature's bandwidth allowance interval.
 * 1 - Monthly
 * 2 - Daily
 * 3 - Hourly
 
-##### `use-mgmt-port`
+#### `use-mgmt-port`
 The appliance will use the management port for communicating with the licensing server if set to True.  By default, the appliance will use the use the first available interface for license server operations.
 
 More details about A10 Licensing can be found at `TODO(Add licensing info url)`.
@@ -262,12 +344,13 @@ a10-manage upgrade
 
 ## Restart necessary services
 
-Restart neutron after configuration updates (exact command may vary depending
-  on OpenStack packaging.)
+Restart neutron after configuration updates in the /etc/a10/config.py file (exact command may vary depending on OpenStack packaging.)
 
 ```sh
 service neutron-server restart
 ```
+
+Note: it is no longer necessary to restart neutron when adding, updating or deleting a10-devices or a10-vthunders using the neutron cli.
 
 ## Example architectures
 
